--- a/fileOne.html
+++ b/fileOne.html
@@ -9,11 +9,18 @@
 			<title>My data visualization chart</title>
 
 
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 
 		<!-- Here is my jQuary library copied from https://developers.google.com/speed/libraries/devguide#jquery -->
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	
+	<!--Here is my jQuery history library and the following command will link this page with my js file  -->	
+	
+	<script type="text/javascript" src="jquery.history.js"></script>	
+
 
 
 	<!--This my google visualization library copied form https://developers.google.com/chart/interactive/docs/gal -->
@@ -26,18 +33,24 @@
 
 	</head>
 	<body>
-
-	<h1>This is my google chart</h1>
-
 		
+		<h1>Post crisis umemplyment in the US</h1>
+	<button type="button" id="date_2008" class="btn btn-success">2008</button> 
+	
+	<div class="btn btn-success" id="year_2009">2009</div>
+
+	<div class="btn btn-success" id="year_2010">2010</div>
+		
+	<div class="btn btn-success" id="year_2011">2011</div>
+	
+	<div class="btn btn-success" id="year_2012">2012</div>
+	
 		<!-- Here is my customs scripts -->
-
-
-
-<div id= "dataBankDiv">
+		
+	<div id= "dataBankDiv">
 
 </div>
-
+	
 		
 		
 	</body>
